[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/MainMenu/GraphicsMenu.gd" type="Script" id=1]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Back Button" type="Button" parent="."]
margin_right = 12.0
margin_bottom = 20.0
text = "Back"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 20.0

[node name="Resolution" type="Label" parent="VBoxContainer"]
margin_right = 122.0
margin_bottom = 14.0
text = "Resolution"

[node name="ResolutionButton" type="OptionButton" parent="VBoxContainer"]
margin_top = 18.0
margin_right = 122.0
margin_bottom = 38.0
text = "Resolution"

[node name="Fullscreen" type="Label" parent="VBoxContainer"]
margin_top = 42.0
margin_right = 122.0
margin_bottom = 56.0
text = "Fullscreen"

[node name="FullscreenCheckbox" type="CheckBox" parent="VBoxContainer"]
margin_top = 60.0
margin_right = 122.0
margin_bottom = 84.0

[node name="FPS" type="Label" parent="VBoxContainer"]
margin_top = 88.0
margin_right = 122.0
margin_bottom = 102.0
text = "Frames Per Second"

[node name="SpinBox" type="SpinBox" parent="VBoxContainer"]
margin_top = 106.0
margin_right = 122.0
margin_bottom = 130.0
min_value = 1.0
max_value = 240.0
value = 60.0

[connection signal="pressed" from="Back Button" to="." method="_on_Back_Button_pressed"]
[connection signal="item_selected" from="VBoxContainer/ResolutionButton" to="." method="_on_ResolutionButton_item_selected"]
[connection signal="toggled" from="VBoxContainer/FullscreenCheckbox" to="." method="_on_FullscreenCheckbox_toggled"]
[connection signal="value_changed" from="VBoxContainer/SpinBox" to="." method="_on_SpinBox_value_changed"]
